change words on forum

--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -758,16 +758,15 @@
                                     <li><img src="../static/img/home_support/cmm5.png" alt="category"><a href="/forum-single1">Are there any scandal-free sanitary pad brands left?
                                     </a> <span class="count">10</span></li>
                                     <li><img src="../static/img/home_support/cmm4.png" alt="category"><a href="#">Product Landing
-                                            Page</a><span class="count count-fill">13</span><span
-                                            class="count">54</span></li>
+                                            Page</a><span class="count">8</span></li>
                                     <li><img src="../static/img/home_support/cmm2.png" alt="category"><a href="#">Knowledge base
-                                            Template</a><span class="count">142</span></li>
+                                            Template</a><span class="count">4</span></li>
                                     <li><img src="../static/img/home_support/cmm8.png" alt="category"><a href="#">Startup and App
-                                            WP Theme</a> <span class="count">13</span></li>
+                                            WP Theme</a> <span class="count">3</span></li>
                                     <li><img src="../static/img/home_support/cmm9.png" alt="category"><a href="#">Clean Email
-                                            Template</a> <span class="count">123</span></li>
+                                            Template</a> <span class="count">2</span></li>
                                     <li><img src="../static/img/home_support/cmm10.png" alt="category"><a href="#">Apps WordPress
-                                            Theme</a> <span class="count">18</span></li>
+                                            Theme</a> <span class="count">1</span></li>
                                 </ul>
                             </div>
 
@@ -895,7 +894,7 @@
     <script src="../static/js_test/main.js"></script>
 </body>
 <script>
-    const postsPerPage = 5;
+    const postsPerPage = 4;
     let allPosts = [];
     let currentPage = 1;
 
