--- a/code/static/css_test/style.css
+++ b/code/static/css_test/style.css
@@ -2793,7 +2793,7 @@ ul.list-style li:last-child {
 .funfact-boxes .funfact-box .counter {
   font-size: 34px;
   font-weight: 500;
-  color: #10b3d6;
+  color: #bd3c55;
   margin-bottom: 10px;
 }
 .funfact-boxes .funfact-box .title {
@@ -3213,7 +3213,7 @@ ul.list-style li:last-child {
   background-image: linear-gradient(180deg, rgba(4, 133, 161, 0.6) 0%, rgba(29, 39, 70, 0.6) 100%);
 }
 .doc_action_area .action_btn {
-  border: 1px solid #10b3d6;
+  border: 1px solid #bd3c55;
 }
 .doc_action_area .action_btn:hover {
   background: transparent;
@@ -3406,8 +3406,8 @@ ul.list-style li:last-child {
   animation: spinner 3s infinite linear;
   border-radius: 50%;
   border: 3px solid #f1f6f8;
-  border-left-color: #10b3d6;
-  border-top-color: #10b3d6;
+  border-left-color: #bd3c55;
+  border-top-color: #bd3c55;
   margin: 0 auto 0em auto;
   position: absolute;
   left: -40px;
@@ -3421,7 +3421,7 @@ ul.list-style li:last-child {
   height: 20px;
   border: 6px solid #fff;
   box-shadow: 0 0 20px 0 rgba(4, 46, 56, 0.2);
-  background: #10b3d6;
+  background: #bd3c55;
   position: absolute;
   right: 31px;
   top: 41px;
@@ -3733,10 +3733,10 @@ ul.list-style li:last-child {
   transition: all 0.3s linear;
 }
 .nav-sidebar .nav-item:hover .nav-link, .nav-sidebar .nav-item.active .nav-link {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .nav-sidebar .nav-item:hover .icon, .nav-sidebar .nav-item.active .icon {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .nav-sidebar .nav-item.active .icon {
   transform: rotate(-180deg);
@@ -3756,10 +3756,10 @@ ul.list-style li:last-child {
   padding: 0;
 }
 .nav-sidebar .nav-item .dropdown_nav li a:hover, .nav-sidebar .nav-item .dropdown_nav li a.active {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .nav-sidebar .nav-item .dropdown_nav li a:hover i, .nav-sidebar .nav-item .dropdown_nav li a.active i {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .nav-sidebar + .nav-sidebar {
   border-top: 1px solid #e5e9eb;
@@ -3810,7 +3810,7 @@ ul.list-style li:last-child {
   display: none;
 }
 .documentation_info .slideshow .title {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 .sticky-nav-doc #documentation {
@@ -3850,7 +3850,7 @@ ul.list-style li:last-child {
   padding-bottom: 50px;
 }
 .get_started .c_head i {
-  color: #10b3d6;
+  color: #bd3c55;
   font-size: 16px;
   margin-left: 8px;
 }
@@ -3858,7 +3858,7 @@ ul.list-style li:last-child {
   color: #6b707f;
 }
 .get_started p a {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 .link {
@@ -3921,12 +3921,12 @@ ul.list-style li:last-child {
   transition: all 0.2s linear;
 }
 .v_menu .nav-item .nav-link.active, .v_menu .nav-item .nav-link:hover {
-  color: #10b3d6;
+  color: #bd3c55;
   border: 0;
   background: transparent;
 }
 .v_menu .nav-item .nav-link.active span, .v_menu .nav-item .nav-link:hover span {
-  background: #10b3d6;
+  background: #bd3c55;
   color: #fff;
 }
 .v_menu .nav-item + li {
@@ -3969,7 +3969,7 @@ ul.list-style li:last-child {
   padding: 34px 0 20px;
 }
 .developer p a {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .developer .tag_list li {
   margin-top: 10px;
@@ -4004,7 +4004,7 @@ ul.list-style li:last-child {
   position: relative;
 }
 .help_text .help_info .help_item h4:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 .code_structure {
@@ -4026,7 +4026,7 @@ ul.list-style li:last-child {
   border-radius: 0;
   background: #e7f7fb;
   border: 0;
-  color: #10b3d6;
+  color: #bd3c55;
   outline: none;
   box-shadow: none;
   transition: all 0.4s linear;
@@ -4038,7 +4038,7 @@ ul.list-style li:last-child {
 .process_tab_shortcode .previous:hover, .process_tab_shortcode .next:hover {
   outline: none;
   box-shadow: none;
-  background: #10b3d6;
+  background: #bd3c55;
   color: #fff;
 }
 .process_tab_shortcode .next {
@@ -4064,7 +4064,7 @@ ul.list-style li:last-child {
   margin-bottom: 18px;
 }
 .question_box .question_text p a {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .question_box .question_text_two {
   padding-left: 50px;
@@ -4105,7 +4105,7 @@ ul.list-style li:last-child {
   border: 0;
   font-size: 16px;
   font-weight: 500;
-  color: #10b3d6;
+  color: #bd3c55;
   padding: 0 20px;
   position: relative;
 }
@@ -6538,7 +6538,7 @@ button.mfp-close {
   transition: all 0.3s linear;
 }
 .basic_table_info.table-hover tbody tr:hover {
-  background: #10b3d6;
+  background: #bd3c55;
   color: #fff;
 }
 
@@ -6564,7 +6564,7 @@ button.mfp-close {
 }
 
 .footnotes-link:target, .footnotes_item:target {
-  outline: 2px solid #10b3d6;
+  outline: 2px solid #bd3c55;
   outline-offset: 2px;
 }
 
@@ -6604,7 +6604,7 @@ button.mfp-close {
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background: #10b3d6;
+  background: #bd3c55;
   position: absolute;
   left: 0;
   top: 9px;
@@ -6661,7 +6661,7 @@ ul.ordered-list li::before {
   border-radius: 50%;
   font-weight: 500;
   font-size: 12px;
-  background-color: #10b3d6;
+  background-color: #bd3c55;
   text-align: center;
   line-height: 23px;
   top: -4px;
@@ -6755,7 +6755,7 @@ ul.ordered-list li::before {
   letter-spacing: 0.8px;
 }
 .changelog_content span.improve {
-  background: #10b3d6;
+  background: #bd3c55;
 }
 .changelog_content span.new {
   background: #0ed193;
@@ -6781,7 +6781,7 @@ ul.ordered-list li::before {
   margin-right: 10px;
 }
 .changelog_content .changelog_btn:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .changelog_content .changelog_btn + .changelog_btn {
   margin-left: 28px;
@@ -6903,7 +6903,7 @@ ul.ordered-list li::before {
 }
 .cheatsheet_item h4 {
   margin-bottom: 0;
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 /*---------------------------------------------------- */
@@ -7154,13 +7154,13 @@ ul.ordered-list li::before {
 
 .action_btn.btn_small, .action_btn.btn_small_two, .action_btn.btn_small_three, .action_btn.btn_bg, .action_btn.btn_radious_none, .action_btn.btn_radious_45 {
   box-shadow: none;
-  border: 2px solid #10b3d6;
+  border: 2px solid #bd3c55;
   transition: all 0.3s linear;
 }
 .action_btn.btn_small:hover, .action_btn.btn_small_two:hover, .action_btn.btn_small_three:hover, .action_btn.btn_bg:hover, .action_btn.btn_radious_none:hover, .action_btn.btn_radious_45:hover {
   background: #f8fdfe;
   border-color: #79ccde;
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 .icon_btn {
@@ -7172,7 +7172,7 @@ ul.ordered-list li::before {
   padding-right: 7px;
 }
 .icon_btn:hover {
-  border-color: #10b3d6;
+  border-color: #bd3c55;
 }
 
 .arrow_btn_medium {
@@ -7227,7 +7227,7 @@ ul.ordered-list li::before {
 }
 .action_content_three .doc_border_btn:hover {
   background: #ffffff;
-  color: #10b3d6;
+  color: #bd3c55;
   border-color: #fff;
 }
 
@@ -7286,7 +7286,7 @@ ul.ordered-list li::before {
   font-weight: 500;
 }
 .post-header .support-total-info li a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .post-header .support-total-info li:not(:last-child) {
   margin-right: 20px;
@@ -7530,7 +7530,7 @@ ul.forum-titles .forum-freshness .freshness-box a {
   color: #6b707f;
 }
 ul.forum-titles .forum-freshness .freshness-box a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 ul.forum-titles .forum-freshness .freshness-box .freshness-btm {
   display: flex;
@@ -7589,12 +7589,12 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   font-weight: 500;
   padding: 10px 25px;
   box-shadow: none;
-  border: 1px solid #10b3d6;
+  border: 1px solid #bd3c55;
   transition: all 0.3s ease-in-out;
 }
 .answer-action .btn-ans:hover {
   background: transparent;
-  color: #10b3d6;
+  color: #bd3c55;
 }
 @media (max-width: 768px) {
   .answer-action .btn-ans {
@@ -7654,7 +7654,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   }
 }
 .call-to-action .action-content-wrapper .action_btn {
-  border: 1px solid #10b3d6;
+  border: 1px solid #bd3c55;
   font-size: 16px;
   padding: 9px 25px;
   font-weight: 500;
@@ -7711,7 +7711,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
 }
 .w_tag_list.style-light li a:hover {
   background: #e1f3f7;
-  color: #10b3d6;
+  color: #bd3c55;
   box-shadow: none;
 }
 
@@ -7733,7 +7733,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   display: inline-block;
 }
 .usefull-links li a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 .ticket_categories li {
@@ -7752,7 +7752,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   color: #774c6e;
 }
 .ticket_categories li a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .ticket_categories li .count {
   position: absolute;
@@ -7786,7 +7786,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   color: #774c6e;
 }
 .forum-post-top .forum-post-author .author-name:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .forum-post-top .forum-post-author .forum-author-meta {
   display: flex;
@@ -7796,7 +7796,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   font-size: 14px;
 }
 .forum-post-top .forum-post-author .forum-author-meta a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .forum-post-top .forum-post-author .forum-author-meta .author-badge svg {
   margin-top: -5px;
@@ -7924,7 +7924,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   color: #838793;
 }
 .forum-post-content .forum-post-btm .taxonomy a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .forum-post-content .forum-post-btm .taxonomy a + a {
   padding-right: 2px;
@@ -8083,13 +8083,13 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   transition: color 0.2s linear;
 }
 .blog_top_post .b_top_post_content h3:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .blog_top_post .b_top_post_content .learn_btn {
   color: #6b707f;
 }
 .blog_top_post .b_top_post_content .learn_btn:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .blog_top_post .b_top_post_content p {
   margin-bottom: 22px;
@@ -8113,7 +8113,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   color: #96588a;
 }
 .post_tag a.c_blue {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .post_tag a.cat-laravel {
   color: #ff2d20;
@@ -8185,14 +8185,14 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   top: 0;
   height: 2px;
   left: 0;
-  background: #10b3d6;
+  background: #bd3c55;
   transform: scale(0);
   transform-origin: 50% 50%;
   transition: all 0.3s ease-in;
 }
 .blog_tab .nav-item .nav-link.active, .blog_tab .nav-item .nav-link:hover {
   background: #e9f6f9;
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .blog_tab .nav-item .nav-link.active:before, .blog_tab .nav-item .nav-link:hover:before {
   transform: scale(1);
@@ -8238,7 +8238,7 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   transition: all 0.2s linear;
 }
 .b_title:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 .blog_grid_post {
@@ -8281,7 +8281,18 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   margin-bottom: 25px;
 }
 .blog_single_item .blog_single_img img {
-  max-width: 100%;
+    width: 300px; /* 固定宽度 */
+    height: 200px; /* 固定高度 */
+    object-fit: cover; /* 保持图片比例并裁剪 */
+    display: block;
+    margin: 0 auto;
+}
+.blog_single_item img {
+    width: 300px; /* 固定宽度 */
+    height: 200px; /* 固定高度 */
+    object-fit: cover; /* 保持图片比例并裁剪 */
+    display: block;
+    margin: 0 auto;
 }
 .blog_single_item p {
   font-size: 16px;
@@ -8289,13 +8300,13 @@ ul.forum-titles .forum-freshness .freshness-box .freshness-btm .bbp-author-avata
   margin-bottom: 26px;
 }
 .blog_single_item p a {
-  color: #10b3d6;
+  color: #d37995;
   text-decoration: underline;
 }
 
 blockquote {
   background: #f3f8f9;
-  border-left: 4px solid #10b3d6;
+  border-left: 4px solid #bd3c55;
   font-size: 20px;
   padding: 50px 40px;
   position: relative;
@@ -8456,7 +8467,7 @@ blockquote .author {
   padding-right: 5px;
 }
 .comment_box .post_comment .comment_author .media-body .comment_reply:hover {
-  color: #10b3d6;
+  color: #ed7d88;
 }
 .comment_box .post_comment .reply_comment {
   padding-left: 80px;
@@ -8535,7 +8546,7 @@ blockquote .author {
   color: #774c6e;
 }
 .blog_classic_item .b_top_post_content .p_bottom .learn_btn:hover {
-  color: #10b3d6;
+  color: #ffadbf;
 }
 .blog_classic_item .b_top_post_content .post_author {
   padding-top: 0;
@@ -8588,8 +8599,8 @@ blockquote .author {
   transform: scale(1.5);
 }
 .video_icon i {
-  color: #10b3d6;
-  text-shadow: 0 6px 13px rgba(12, 118, 142, 0.6);
+  color: #ffadbf;
+  text-shadow: 0 6px 13px rgb(189, 60, 85);
   position: relative;
 }
 .video_icon i:after {
@@ -8610,7 +8621,7 @@ blockquote .author {
 
 .blog_link_post {
   background: #f3f8f9;
-  border-left: 4px solid #10b3d6;
+  border-left: 4px solid #ffadbf;
   padding: 45px 40px;
   line-height: 34px;
   position: relative;
@@ -8642,7 +8653,7 @@ blockquote .author {
   transition: color 0.2s linear;
 }
 .blog_link_post p:hover {
-  color: #10b3d6;
+  color: #ffadbf;
 }
 
 .blog_related_post {
@@ -8704,13 +8715,13 @@ blockquote .author {
   height: 36px;
   display: inline-flex;
   border-radius: 4px;
-  border: 1px solid #a7e1ed;
+  border: 1px solid #fdcdd9;
   text-align: center;
   align-items: center;
   justify-content: center;
   font-size: 16px;
   vertical-align: middle;
-  color: #10b3d6;
+  color: #ffadbf;
   transition: all 0.2s linear;
 }
 .pagination .page-numbers i {
@@ -8720,9 +8731,9 @@ blockquote .author {
   margin-left: 10px;
 }
 .pagination .page-numbers:hover, .pagination .page-numbers.current {
-  background-color: #10b3d6;
-  border-color: #10b3d6;
-  box-shadow: 0 20px 30px 0 rgba(12, 118, 142, 0.24);
+  background-color: #ffadbf;
+  border-color: #ffadbf;
+  box-shadow: 0 20px 30px 0 rgb(119, 76, 110);
   color: #fff;
 }
 .pagination .page-numbers.current {
@@ -8785,10 +8796,10 @@ blockquote .author {
   padding-left: 10px;
 }
 .categorie_list li a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .categorie_list li a:hover:before {
-  background: #10b3d6;
+  background: #bd3c55;
 }
 .categorie_list li + li {
   margin-top: 8px;
@@ -8808,7 +8819,7 @@ blockquote .author {
   transition: color 0.2s linear;
 }
 .recent_post_item .media-body h5:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .recent_post_item .media-body .entry_post_date {
   font-size: 14px;
@@ -8837,7 +8848,7 @@ blockquote .author {
 }
 .w_tag_list li a:hover {
   box-shadow: 0 10px 20px 0 rgba(12, 118, 142, 0.24);
-  background: #10b3d6;
+  background: #bd3c55;
   color: #fff;
 }
 
@@ -9116,7 +9127,7 @@ blockquote .author {
   height: 100%;
   position: absolute;
   top: 0;
-  color: #10b3d6;
+  color: #bd3c55;
   text-align: center;
   line-height: 12px;
   left: 0;
@@ -9128,7 +9139,7 @@ blockquote .author {
   margin-bottom: 0;
 }
 .login_form .form-group .l_text span {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .login_form .form-group .confirm_password {
   position: relative;
@@ -9184,20 +9195,20 @@ blockquote .author {
 
 /* Clear 按钮（浅蓝色 💙） */
 .login_form .ban-button {
-    background-color: #87ceeb; /* 浅蓝色 */
+    background-color: #ffadbf; /* 浅蓝色 */
     margin: 0 23px;
 }
 
 .login_form .ban-button:hover {
-    background-color: #6495ed;
+    background-color: #ffadbf;
     box-shadow: 0 0 0 3px white,
-                0 0 0 6px #87ceeb;
+                0 0 0 6px #FFADBFFF;
 }
 
 .login_form .ban-button:active {
-    background-color: #4682b4;
-    box-shadow: 0 0 0 3px #87ceeb,
-                0 0 0 6px #87ceeb;
+    background-color: #a54451;
+    box-shadow: 0 0 0 3px #FFADBFFF,
+                0 0 0 6px #FFADBFFF;
     transition-duration: 75ms;
 }
 
@@ -9340,7 +9351,7 @@ blockquote .author {
   display: block;
   width: 5px;
   height: 11px;
-  border: solid #10b3d6;
+  border: solid #bd3c55;
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
   position: absolute;
@@ -9350,13 +9361,13 @@ blockquote .author {
   transition: all 0.2s linear;
 }
 .contact_info .contact_form .form-group .form-check input[type=checkbox]:checked:before {
-  border-color: #10b3d6;
+  border-color: #bd3c55;
 }
 .contact_info .contact_form .form-group .form-check input[type=checkbox]:checked:after {
   opacity: 1;
 }
 .contact_info .contact_form .form-group .form-check input[type=checkbox]:checked + label {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .contact_info .contact_form .form-group .form-check input[type=radio] {
   width: 12px;
@@ -9386,7 +9397,7 @@ blockquote .author {
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background: #10b3d6;
+  background: #bd3c55;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -9396,13 +9407,13 @@ blockquote .author {
   transition: all 0.2s linear;
 }
 .contact_info .contact_form .form-group .form-check input[type=radio]:checked:before {
-  border-color: #10b3d6;
+  border-color: #bd3c55;
 }
 .contact_info .contact_form .form-group .form-check input[type=radio]:checked:after {
   transform: scale(1);
 }
 .contact_info .contact_form .form-group .form-check input[type=radio]:checked + label {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .contact_info .contact_form .form-group .form-control {
   height: 60px;
@@ -9461,7 +9472,7 @@ blockquote .author {
 .error_dot.one {
   width: 8px;
   height: 8px;
-  background: #10b3d6;
+  background: #bd3c55;
   left: 325px;
   top: 120px;
   animation: spin2 2s infinite alternate;
@@ -9626,7 +9637,7 @@ blockquote .author {
   color: #c7c9d3;
 }
 .body_dark .nav-sidebar .nav-item .nav-link.active, .body_dark .nav-sidebar .nav-item .nav-link:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .body_dark .nav-sidebar .nav-item .dropdown_nav li a {
   color: #bbb;
@@ -9677,7 +9688,7 @@ blockquote .author {
   background: #061f2f;
 }
 .body_dark .toggle_btn {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .body_dark .menu > .nav-item.submenu .dropdown-menu .nav-item .nav-link h5 {
   color: #774c6e;
@@ -9754,7 +9765,7 @@ blockquote .author {
   font-size: 16px;
 }
 .f_widget.link_widget .link_list li a:hover {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .f_widget.link_widget .link_list li + li {
   margin-top: 15px;
@@ -9793,7 +9804,7 @@ blockquote .author {
   border: 0;
   font-size: 16px;
   font-weight: 400;
-  background: #10b3d6;
+  background: #bd3c55;
   border-radius: 4px;
   color: #fff;
   position: absolute;
@@ -9818,12 +9829,12 @@ blockquote .author {
   line-height: 45px;
   text-align: center;
   display: block;
-  color: #10b3d6;
+  color: #bd3c55;
   margin-right: 6px;
 }
 .f_social_icon li a:hover {
-  background: #10b3d6;
-  border-color: #10b3d6;
+  background: #bd3c55;
+  border-color: #bd3c55;
   box-shadow: 0 10px 20px 0 rgba(12, 118, 142, 0.2);
   color: #fff;
 }
@@ -9839,7 +9850,7 @@ blockquote .author {
   color: #6b707f;
 }
 .footer_bottom p a {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 
 .pl_30 {
@@ -9871,7 +9882,7 @@ blockquote .author {
   color: #a4a8b4;
 }
 .simple_footer p a {
-  color: #10b3d6;
+  color: #bd3c55;
 }
 .simple_footer .f_social_icon {
   margin-bottom: 0;
@@ -9885,8 +9896,8 @@ blockquote .author {
   border-color: #8d93a4;
 }
 .simple_footer .f_social_icon li a:hover {
-  background: #10b3d6;
-  border-color: #10b3d6;
+  background: #bd3c55;
+  border-color: #bd3c55;
   color: #fff;
 }
 
