--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -42,7 +42,7 @@
          <section class="signup_area">
             <div class="row ml-0 mr-0">
                 <div class="sign_left signin_left">
-                    <h2>We are design changers do what matters.</h2>
+                    <h2>Digital Strength for Real Queens.</h2>
                     <div class="round"></div>
                     <div class="avatar-name">
                         <img class="avatar-img" src="../static/images/Boran.jpg" alt="Boran">
