Change the blog page direction

--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -477,7 +477,7 @@
                                 </div>
 
                                 <div class="HerBlossom-com-box-content">
-                                    <h3 class="title"><a href="/blog-list">Blogs</a></h3>
+                                    <h3 class="title"><a href="/blog">Blogs</a></h3>
                                     <p class="total-post">235 Posts</p>
                                 </div>
                                 <!-- /.HerBlossom-com-box-content -->
