--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -156,8 +156,8 @@
     <section class="carousel-section" style="padding: 50px 0; background-color: #f8f9fa;">
         <div class="container">
             <div class="section_title text-center">
-                <h2 class="h_title wow fadeInUp">我们的主要功能</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.2s">探索HerBlossom提供的核心服务</p>
+                <h2 class="h_title wow fadeInUp">Main Function</h2>
+                <p class="wow fadeInUp" data-wow-delay="0.2s">Explore the core services HerBlossom offers</p>
             </div>
             <div class="carousel-container" style="margin-top: 30px;">
                 <div class="carousel-slide">
@@ -169,13 +169,13 @@
                     </div>
                     <div class="carousel-item">
                         <a href="/forum">
-                            <img src="../static/img/Blog.png" alt="Forum">
+                            <img src="../static/img/Forum.jpg" alt="Forum">
                             <h3>Forum</h3>
                         </a>
                     </div>
                     <div class="carousel-item">
                         <a href="/job-recommendation">
-                            <img src="../static/img/Blog.png" alt="Job Recommendation">
+                            <img src="../static/img/Blog_2.png" alt="Job Recommendation">
                             <h3>Job Recommendation</h3>
                         </a>
                     </div>
@@ -219,7 +219,7 @@
 
                 <div class="card">
                     <a class="index-jump-aboutus" href="Aboutus.html">About Us <i class="arrow_right"></i></a>
-                    <p class="wow fadeInUp" data-wow-delay="0.2s">Click to learn more about us.</p>
+                    <p class="index-little-white" data-wow-delay="0.2s">Click to learn more about us.</p>
                 </div>
 
 <!--                <h2>Looking for information?</h2>-->
@@ -346,12 +346,12 @@
     </section>
 
 
+<!--    section for displaying Blog-->
     <section class="theme_doc_area bg_color sec_pad">
         <div class="container">
             <div class="section_title text-center">
-                <h2 class="h_title wow fadeInUp">Theme Documentation</h2>
-                <p class="wow fadeInUp" data-wow-delay="0.2s">Some dodgy chav bevvy amongst argy-bargy spiffing
-                    absolutely bladdered nancy boy cup of tea a load of old tosh porkies.</p>
+                <h2 class="h_title wow fadeInUp">Blog</h2>
+                <p class="wow fadeInUp" data-wow-delay="0.2s">An official blog about women's physical health and life skills</p>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-sm-6">
@@ -387,12 +387,25 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+
+<!--    section for displaying forum post-->
+    <section class="theme_doc_area bg_color sec_pad">
+        <div class="container">
+            <div class="section_title text-center">
+                <h2 class="h_title wow fadeInUp">Forum</h2>
+                <p class="wow fadeInUp" data-wow-delay="0.2s">Some user posts in the forum.</p>
+            </div>
+            <div class="row">
                 <div class="col-lg-4 col-sm-6">
                     <div class="media theme_doc_item wow fadeInUp">
-                        <img src="../static/img/home_two/usser.png" alt="">
+                        <img src="../static/img/home_two/cloud1.png" alt="">
                         <div class="media-body">
                             <a href="#">
-                                <h4 class="c_head">Account Management</h4>
+                                <h4 class="c_head">Grow Your Business</h4>
                             </a>
                             <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
                         </div>
@@ -400,10 +413,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="../static/img/home_two/pencil.png" alt="">
+                        <img src="../static/img/home_two/Lock_is_open.png" alt="">
                         <div class="media-body">
                             <a href="#">
-                                <h4 class="c_head">Formatting Content</h4>
+                                <h4 class="c_head">Knowledge Base</h4>
                             </a>
                             <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
                         </div>
@@ -411,43 +424,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">
-                        <img src="../static/img/home_two/Channel.png" alt="">
+                        <img src="../static/img/home_two/Support.png" alt="">
                         <div class="media-body">
                             <a href="#">
-                                <h4 class="c_head">Great Products</h4>
-                            </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp">
-                        <img src="../static/img/home_two/Duplicate.png" alt="">
-                        <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Documentation</h4>
-                            </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">
-                        <img src="../static/img/home_two/Bell.png" alt="">
-                        <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Dedicated Widgets</h4>
-                            </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">
-                        <img src="../static/img/home_two/Tune-up.png" alt="">
-                        <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Working with Docs</h4>
+                                <h4 class="c_head">Online Support</h4>
                             </a>
                             <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
                         </div>
@@ -456,6 +436,8 @@
             </div>
         </div>
     </section>
+
+
 
 
 
@@ -629,7 +611,7 @@
         }
 
         function nextSlide() {
-            currentIndex = (currentIndex + 1) % items.length;
+            const nextIndex = (currentIndex + 1) % items.length;
             goToSlide(nextIndex);
         }
 
@@ -644,8 +626,9 @@
             });
         });
 
-        // 每3秒切换一次
+        // 启动自动播放
         interval = setInterval(nextSlide, 3000);
+
     });
 
 </script>
