--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -76,7 +76,7 @@
                                                     <a class="nav-link active" id="v-pills-doc-tab" data-toggle="pill" href="#v-pills-doc" role="tab" aria-controls="v-pills-doc" aria-selected="true">Forum</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" id="v-pills-code-tab" data-toggle="pill" href="/blog" role="tab" aria-controls="v-pills-code" aria-selected="false">Blogs</a>
+                                                    <a class="nav-link" id="v-pills-code-tab" data-toggle="pill" href="#v-pills-code" role="tab" aria-controls="v-pills-code" aria-selected="false">Blogs</a>
                                                 </li>
                                                 <li class="nav-item">
                                                     <a class="nav-link" id="v-pills-layout-tab" data-toggle="pill" href="#v-pills-layout" role="tab" aria-controls="v-pills-layout" aria-selected="false">Jobs Recommendation</a>
@@ -89,10 +89,10 @@
                                                     <div class="d-flex">
                                                         <ul class="list-unstyled tab_list">
                                                             <li>
-                                                                <a href="/forum-topics">Forum Community</a>
+                                                                 <a href="/forum-topics">Forum Community</a>
                                                             </li>
                                                             <li>
-                                                                <a href="/blog">Official Blogs</a>
+                                                                <a href="blog.html">Official Blogs</a>
                                                             </li>
                                                         </ul>
                                                     </div>
@@ -150,7 +150,7 @@
                     <a class="nav_btn" href="signin.html" id="signin-link">Sign In</a>
                 </div>
             </div>
-    </nav>
+        </nav>
 
     <!--                anto change the pages-->
     <section class="carousel-section" style="padding: 50px 0; background-color: #f8f9fa;">
