change the upper bar and the footer

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -277,7 +277,7 @@
 <!--                            <li><a href="#"><i class="icon_document_alt"></i>Post 4</a></li>-->
 <!--                            <li><a href="#"><i class="icon_document_alt"></i>Post 5</a></li>-->
 <!--                        </ul>-->
-                        <a href="forum-topics.html" class="doc_border_btn">More<i class="arrow_right"></i></a>
+                        <a href="forums.html" class="doc_border_btn">More<i class="arrow_right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
@@ -501,6 +501,41 @@
                             </ul>
                         </div>
                     </div>
+
+
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
+                            <h3 class="f_title">HerBlossom Pages</h3>
+                            <ul class="list-unstyled link_list">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="signin.html">Sign In</a></li>
+                                <li><a href="blog.html">Blog</a></li>
+                                <li><a href="forums.html">Forum</a></li>
+                                <li><a href="#">Job Recommendation</a></li>
+
+<!--                                <li><a href="changelog.html">Changelog</a></li>-->
+<!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
+<!--                                <li><a href="#">Conversion Tracking</a></li>-->
+<!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-sm-6">
+                        <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
+                            <h3 class="f_title">Blog</h3>
+                            <ul class="list-unstyled link_list">
+                                <li><a href="life-skills.html">Life Skills</a></li>
+                                <li><a href="physical-health.html">Physical Health</a></li>
+                                <li><a href="mental-health.html">Mental Health</a></li>
+                                <li><a href="tab.html">Tables</a></li>
+<!--                                <li><a href="#">Image Lightbox</a></li>-->
+<!--                                <li><a href="#">iOS & Android</a></li>-->
+<!--                                <li><a href="#">Messages</a></li>-->
+                            </ul>
+                        </div>
+                    </div>
+
                     <div class="col-lg-3 col-sm-6">
                         <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
                             <h3 class="f_title">Company</h3>
@@ -514,37 +549,7 @@
                             </ul>
                         </div>
                     </div>
-<!--                    <div class="col-lg-2 col-sm-6">-->
-<!--                        <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">-->
-<!--                            <h3 class="f_title">Support</h3>-->
-<!--                            <ul class="list-unstyled link_list">-->
-<!--                                <li><a href="index-3.html">Help Desk</a></li>-->
-<!--                                <li><a href="#">Knowledge Base</a></li>-->
-<!--                                <li><a href="#">Live Chat</a></li>-->
-<!--                                <li><a href="#">Integrations</a></li>-->
-<!--                                <li><a href="#">Reports</a></li>-->
-<!--                                <li><a href="#">iOS & Android</a></li>-->
-<!--                                <li><a href="#">Messages</a></li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
-                            <h3 class="f_title">HerBlossom Pages</h3>
-                            <ul class="list-unstyled link_list">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="signin.html">Sign In</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="#">Forum</a></li>
-                                <li><a href="#">Job Recommendation</a></li>
 
-<!--                                <li><a href="changelog.html">Changelog</a></li>-->
-<!--                                <li><a href="Onepage.html">Onepage Docs</a></li>-->
-<!--                                <li><a href="#">Conversion Tracking</a></li>-->
-<!--                                <li><a href="cheatsheet.html">Cheatseet</a></li>-->
-                            </ul>
-                        </div>
-                    </div>
                 </div>
                 <div class="border_bottom"></div>
             </div>
