--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <div class="carousel-item">
                         <a href="#">
-                            <img src=../static/img/Blog.png" alt="Forum">
+                            <img src="../static/img/Blog.png" alt="Forum">
                             <h3>Forum</h3>
                         </a>
                     </div>
@@ -607,7 +607,7 @@
 
         function goToSlide(index) {
             currentIndex = index;
-            const translateX = -currentIndex * 33.333;  // 修改这里，使用百分比
+            const translateX = -currentIndex * 83.5;  // 修改这里，使用百分比
             carousel.style.transform = `translateX(${translateX}%)`;
             dots.forEach((dot, i) => {
                 dot.classList.toggle('active', i === index);
