add the blog section in the index

--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -364,10 +364,10 @@
                     <div class="media theme_doc_item wow fadeInUp">
                         <img src="../static/img/home_two/cloud1.png" alt="">
                         <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Grow Your Business</h4>
+                            <a href="life-skills.html">
+                                <h4 class="c_head">Life Skills</h4>
                             </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
+                            <p>20 Important Life Skills To Support Your Career Success</p>
                         </div>
                     </div>
                 </div>
@@ -375,10 +375,10 @@
                     <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">
                         <img src="../static/img/home_two/Lock_is_open.png" alt="">
                         <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Knowledge Base</h4>
+                            <a href="physical-health.html">
+                                <h4 class="c_head">Physical Health</h4>
                             </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
+                            <p>How to Connect Google Calendar With WordPress Contact Forms</p>
                         </div>
                     </div>
                 </div>
@@ -386,10 +386,10 @@
                     <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">
                         <img src="../static/img/home_two/Support.png" alt="">
                         <div class="media-body">
-                            <a href="#">
-                                <h4 class="c_head">Online Support</h4>
+                            <a href="mental-health.html">
+                                <h4 class="c_head">Mental Health</h4>
                             </a>
-                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
+                            <p>The Power of Physical Activity for Women's Health</p>
                         </div>
                     </div>
                 </div>
