--- a/code/templates/life-skills.html
+++ b/code/templates/life-skills.html
@@ -60,7 +60,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav menu ml-auto">
                         <li class="nav-item dropdown submenu">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
+                            <a href="/index" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu">
                                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
@@ -113,7 +113,7 @@
                                                         </ul>
                                                     </div>
                                                     <div class="text">
-                                                        <a href="index.html"><p>Home</p></a>
+                                                        <a href="/index"><p>Home</p></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -138,7 +138,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Aboutus.html" class="nav-link">
+                                    <a href="aboutus.html" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>About Us</h5>
@@ -149,7 +149,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <a class="nav_btn" href="signin.html" id="signin-link">Sign In</a>
+                    <a class="nav_btn" href="/signin" id="signin-link">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -219,7 +219,7 @@
 
                                     <!-- 将原有的静态图片替换为热点交互图片 -->
                                     <div class="pointing_img_container pointing_img_two">
-                                        <img class="img-fluid" src="../static/img/blog-single/skill-3.jpg" alt="large">
+<!--?                                        <img class="img-fluid" src="../static/img/blog-single/skill-3.jpg" alt="large">-->
                                         <div class="img_pointing one tooltips" data-tooltip-content="#img_tooltipone">
                                             <div class="dot"></div>
                                         </div>
@@ -366,56 +366,6 @@
                                         <li><a href="#"><i class="social_vimeo"></i></a></li>
                                         <li><a href="#"><i class="social_linkedin"></i></a></li>
                                     </ul>
-                                </div>
-                            </div>
-                            <div class="blog_related_post">
-                                <h2 class="c_head">Related Post</h2>
-                                <div class="row">
-                                    <div class="col-lg-4 col-sm-6">
-                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
-                                            <img src="../static/img/blog-grid/blog_grid_post2.jpg" alt="">
-                                            <div class="grid_post_content">
-                                                <div class="post_tag">
-                                                    <a href="#">18 Min Read</a>
-                                                    <a class="cat-HerBlossom" href="#">HerBlossom</a>
-                                                </div>
-                                                <a href="#">
-                                                    <h4 class="b_title">70 Best Startups You Need to Watch Out for</h4>
-                                                </a>
-                                                <p>Cup of char brilliant horse play bro bread sloshed lavatory only...</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-sm-6">
-                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
-                                            <img src="../static/img/blog-grid/blog_grid_post3.jpg" alt="">
-                                            <div class="grid_post_content">
-                                                <div class="post_tag">
-                                                    <a href="#">10 Min Read</a>
-                                                    <a class="cat-woocommerce" href="#">WooCommerce</a>
-                                                </div>
-                                                <a href="#">
-                                                    <h4 class="b_title">How to Connect Google With WordPress</h4>
-                                                </a>
-                                                <p>Cup of char brilliant horse play bro bread sloshed lavatory only...</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-sm-6">
-                                        <div class="blog_grid_post wow fadeInUp" data-wow-delay="0.2s">
-                                            <img src="../static/img/blog-grid/blog_grid_post6.jpg" alt="">
-                                            <div class="grid_post_content">
-                                                <div class="post_tag">
-                                                    <a href="#">9 Min Read</a>
-                                                    <a class="cat-megento" href="#">Megento</a>
-                                                </div>
-                                                <a href="#">
-                                                    <h4 class="b_title">10 WordPress Security Issues And How to Fix</h4>
-                                                </a>
-                                                <p>Cup of char brilliant horse play bro bread sloshed lavatory only...</p>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="comment_inner">
