--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -36,7 +36,7 @@
 <div class="body_wrapper">
     <nav class="navbar navbar-expand-lg menu_two" id="sticky">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/index">
                 <img src="../static/img/logo.png" srcset="../static/img/logo-2x.png 2x" alt="logo">
             </a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
@@ -58,72 +58,26 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav menu ml-auto">
                         <li class="nav-item dropdown submenu">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
+                            <a href="/index" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true" data-toggle="dropdown"></i>
-                            <ul class="dropdown-menu">
-                               <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                            </ul>
+<!--?                            <ul class="dropdown-menu">-->
+<!--?                               <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>-->
+<!--?                            </ul>-->
                         </li>
                         <li class="nav-item dropdown submenu mega_menu tab-demo">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Forum</a>
+                            <a href="/forum-topics" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Forum</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true" data-toggle="dropdown"></i>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <div class="row">
-                                        <div class="col-lg-5 tabHeader">
-                                            <ul class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                                                <li class="nav-item active">
-                                                    <a class="nav-link active" id="v-pills-doc-tab" data-toggle="pill" href="#v-pills-doc" role="tab" aria-controls="v-pills-doc" aria-selected="true">Forum</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link" id="v-pills-code-tab" data-toggle="pill" href="#v-pills-code" role="tab" aria-controls="v-pills-code" aria-selected="false">Blogs</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link" id="v-pills-layout-tab" data-toggle="pill" href="#v-pills-layout" role="tab" aria-controls="v-pills-layout" aria-selected="false">Jobs Recommendation</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-lg-7">
-                                            <div class="tab-content tabContent" id="v-pills-tabContent">
-                                                <div class="tab-pane fade active show" id="v-pills-doc" role="tabpanel" aria-labelledby="v-pills-doc-tab">
-                                                    <div class="d-flex">
-                                                        <ul class="list-unstyled tab_list">
-                                                            <li>
-                                                                 <a href="/forum-topics">Forum Community</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog.html">Official Blogs</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="text">
-                                                        <a href="index.html"><p>Home</p></a>
-                                                    </div>
-                                                </div>
-                                                <div class="tab-pane fade" id="v-pills-code" role="tabpanel" aria-labelledby="v-pills-code-tab">
-                                                    <div class="d-flex">
-                                                        <ul class="list-unstyled tab_list">
-                                                            <li><a href="life-skills.html">Life Skills</a></li>
-                                                            <li><a href="physical-health.html">Physical Health</a></li>
-                                                            <li><a href="mental-health.html">Mental Health</a></li>
-                                                            <li><a href="tab.html">Tables</a></li>
-                                                            <li><a href="image-pointing.html">Image Lightbox</a></li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="text">
-                                                        <a href="index.html"><p>Home</p></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
+                        </li>
+                        <li class="nav-item dropdown submenu mega_menu tab-demo">
+                            <a href="/blog" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">Blog</a>
+                        </li>
+                        <li class="nav-item dropdown submenu mega_menu tab-demo">
+                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">Job Recommendation</a>
                         </li>
                         <li class="nav-item dropdown submenu">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Products
-                            </a>
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
                             <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="false" data-toggle="dropdown"></i>
                             <ul class="dropdown-menu dropdown_menu_two">
                                 <li class="nav-item">
@@ -136,7 +90,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Aboutus.html" class="nav-link">
+                                    <a href="/about-us" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>About Us</h5>
@@ -147,7 +101,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <a class="nav_btn" href="signin.html" id="signin-link">Sign In</a>
+                    <a class="nav_btn" href="/signin" id="signin-link">Sign In</a>
                 </div>
             </div>
         </nav>
@@ -224,7 +178,7 @@
 
 
                 <div class="card">
-                    <a class="index-jump-aboutus" href="Aboutus.html">About Us <i class="arrow_right"></i></a>
+                    <a class="index-jump-aboutus" href="/about-us">About Us <i class="arrow_right"></i></a>
                     <p class="index-little-white" data-wow-delay="0.2s">Click to learn more about us.</p>
                 </div>
 
@@ -266,7 +220,7 @@
 <!--                            <li><a href="#"><i class="icon_document_alt"></i>Blog 4</a></li>-->
 <!--                            <li><a href="#"><i class="icon_document_alt"></i>Blog 5</a></li>-->
 <!--                        </ul>-->
-                        <a href="blog.html" class="doc_border_btn">More<i class="arrow_right"></i></a>
+                        <a href="/blog" class="doc_border_btn">More<i class="arrow_right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
@@ -283,7 +237,7 @@
 <!--                            <li><a href="#"><i class="icon_document_alt"></i>Post 4</a></li>-->
 <!--                            <li><a href="#"><i class="icon_document_alt"></i>Post 5</a></li>-->
 <!--                        </ul>-->
-                        <a href="forums.html" class="doc_border_btn">More<i class="arrow_right"></i></a>
+                        <a href="/forum-topics" class="doc_border_btn">More<i class="arrow_right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6">
@@ -364,10 +318,10 @@
                     <div class="media theme_doc_item wow fadeInUp">
                         <img src="../static/img/home_two/cloud1.png" alt="">
                         <div class="media-body">
-                            <a href="life-skills.html">
-                                <h4 class="c_head">Life Skills</h4>
+                            <a href="#">
+                                <h4 class="c_head">Grow Your Business</h4>
                             </a>
-                            <p>20 Important Life Skills To Support Your Career Success</p>
+                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
                         </div>
                     </div>
                 </div>
@@ -375,10 +329,10 @@
                     <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.2s">
                         <img src="../static/img/home_two/Lock_is_open.png" alt="">
                         <div class="media-body">
-                            <a href="physical-health.html">
-                                <h4 class="c_head">Physical Health</h4>
+                            <a href="#">
+                                <h4 class="c_head">Knowledge Base</h4>
                             </a>
-                            <p>How to Connect Google Calendar With WordPress Contact Forms</p>
+                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
                         </div>
                     </div>
                 </div>
@@ -386,10 +340,10 @@
                     <div class="media theme_doc_item wow fadeInUp" data-wow-delay="0.4s">
                         <img src="../static/img/home_two/Support.png" alt="">
                         <div class="media-body">
-                            <a href="mental-health.html">
-                                <h4 class="c_head">Mental Health</h4>
+                            <a href="#">
+                                <h4 class="c_head">Online Support</h4>
                             </a>
-                            <p>The Power of Physical Activity for Women's Health</p>
+                            <p>Oxford bonnet are you taking the piss cheeky mufty.</p>
                         </div>
                     </div>
                 </div>
@@ -460,7 +414,7 @@
                         <h4>Contact Us</h4>
                         <p>The team that created HerBlossom,
                             and the original intention of creating HerBlossom</p>
-                        <a href="Aboutus.html" class="learn_btn c_blue">Go To Contact Us<i class="arrow_right"></i></a>
+                        <a href="/about-us" class="learn_btn c_blue">Go To Contact Us<i class="arrow_right"></i></a>
                     </div>
 <!--                </div>-->
 <!--                <div class="col-sm-6">-->
@@ -507,16 +461,41 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
+                            <h3 class="f_title">Company</h3>
+                            <ul class="list-unstyled link_list">
+                                <li><a href="/about-us">About Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
 
-
+<!--                                <li><a href="#">Careers</a></li>-->
+<!--                                <li><a href="#">HerBlossom for Good</a></li>-->
+<!--                                <li><a href="#">Contact Us</a></li>-->
+                            </ul>
+                        </div>
+                    </div>
+<!--                    <div class="col-lg-2 col-sm-6">-->
+<!--                        <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">-->
+<!--                            <h3 class="f_title">Support</h3>-->
+<!--                            <ul class="list-unstyled link_list">-->
+<!--                                <li><a href="index-3.html">Help Desk</a></li>-->
+<!--                                <li><a href="#">Knowledge Base</a></li>-->
+<!--                                <li><a href="#">Live Chat</a></li>-->
+<!--                                <li><a href="#">Integrations</a></li>-->
+<!--                                <li><a href="#">Reports</a></li>-->
+<!--                                <li><a href="#">iOS & Android</a></li>-->
+<!--                                <li><a href="#">Messages</a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+<!--                    </div>-->
                     <div class="col-lg-3 col-sm-6">
                         <div class="f_widget link_widget pl_70 wow fadeInUp" data-wow-delay="0.6s">
                             <h3 class="f_title">HerBlossom Pages</h3>
                             <ul class="list-unstyled link_list">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="signin.html">Sign In</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="forums.html">Forum</a></li>
+                                <li><a href="/index">Home</a></li>
+                                <li><a href="/signin">Sign In</a></li>
+                                <li><a href="/blog">Blog</a></li>
+                                <li><a href="#">Forum</a></li>
                                 <li><a href="#">Job Recommendation</a></li>
 
 <!--                                <li><a href="changelog.html">Changelog</a></li>-->
@@ -526,36 +505,6 @@
                             </ul>
                         </div>
                     </div>
-
-                    <div class="col-lg-2 col-sm-6">
-                        <div class="f_widget link_widget wow fadeInUp" data-wow-delay="0.4s">
-                            <h3 class="f_title">Blog</h3>
-                            <ul class="list-unstyled link_list">
-                                <li><a href="life-skills.html">Life Skills</a></li>
-                                <li><a href="physical-health.html">Physical Health</a></li>
-                                <li><a href="mental-health.html">Mental Health</a></li>
-                                <li><a href="tab.html">Tables</a></li>
-<!--                                <li><a href="#">Image Lightbox</a></li>-->
-<!--                                <li><a href="#">iOS & Android</a></li>-->
-<!--                                <li><a href="#">Messages</a></li>-->
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3 col-sm-6">
-                        <div class="f_widget link_widget pl_30 wow fadeInUp" data-wow-delay="0.2s">
-                            <h3 class="f_title">Company</h3>
-                            <ul class="list-unstyled link_list">
-                                <li><a href="Aboutus.html">About Us</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-
-<!--                                <li><a href="#">Careers</a></li>-->
-<!--                                <li><a href="#">HerBlossom for Good</a></li>-->
-<!--                                <li><a href="#">Contact Us</a></li>-->
-                            </ul>
-                        </div>
-                    </div>
-
                 </div>
                 <div class="border_bottom"></div>
             </div>
@@ -594,7 +543,7 @@
         signinLink.href = 'profile.html';    // 跳转到用户的个人主页
     } else {
         signinLink.textContent = 'Sign In';  // 如果用户未登录，显示"Sign In"
-        signinLink.href = 'signin.html';    // 跳转到登录页面
+        signinLink.href = '/signin';    // 跳转到登录页面
     }
 };</script>
 
