--- a/code/templates/mental-health.html
+++ b/code/templates/mental-health.html
@@ -55,67 +55,27 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav menu ml-auto">
                         <li class="nav-item dropdown submenu">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
-                            <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true" data-toggle="dropdown"></i>
-                            <ul class="dropdown-menu">
-                               <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                            </ul>
+                            <a href="/index" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">Home</a>
+                            <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"
+                               data-toggle="dropdown"></i>
+                            <!--?                            <ul class="dropdown-menu">-->
+                            <!--?                               <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>-->
+                            <!--?                            </ul>-->
                         </li>
                         <li class="nav-item dropdown submenu mega_menu tab-demo">
-                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Forum</a>
-                            <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true" data-toggle="dropdown"></i>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <div class="row">
-                                        <div class="col-lg-5 tabHeader">
-                                            <ul class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                                                <li class="nav-item active">
-                                                    <a class="nav-link active" id="v-pills-doc-tab" data-toggle="pill" href="#v-pills-doc" role="tab" aria-controls="v-pills-doc" aria-selected="true">Forum</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link" id="v-pills-code-tab" data-toggle="pill" href="#v-pills-code" role="tab" aria-controls="v-pills-code" aria-selected="false">Blogs</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link" id="v-pills-layout-tab" data-toggle="pill" href="#v-pills-layout" role="tab" aria-controls="v-pills-layout" aria-selected="false">Jobs Recommendation</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-lg-7">
-                                            <div class="tab-content tabContent" id="v-pills-tabContent">
-                                                <div class="tab-pane fade active show" id="v-pills-doc" role="tabpanel" aria-labelledby="v-pills-doc-tab">
-                                                    <div class="d-flex">
-                                                        <ul class="list-unstyled tab_list">
-                                                            <li>
-                                                                 <a href="/forum-topics">Forum Community</a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="blog.html">Official Blogs</a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="text">
-                                                        <a href="index.html"><p>Home</p></a>
-                                                    </div>
-                                                </div>
-                                                <div class="tab-pane fade" id="v-pills-code" role="tabpanel" aria-labelledby="v-pills-code-tab">
-                                                    <div class="d-flex">
-                                                        <ul class="list-unstyled tab_list">
-                                                            <li><a href="life-skills.html">Life Skills</a></li>
-                                                            <li><a href="physical-health.html">Physical Health</a></li>
-                                                            <li><a href="mental-health.html">Mental Health</a></li>
-                                                            <li><a href="tab.html">Tables</a></li>
-                                                            <li><a href="image-pointing.html">Image Lightbox</a></li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="text">
-                                                        <a href="index.html"><p>Home</p></a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
+                            <a href="/forum-topics" class="nav-link dropdown-toggle" role="button"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Forum</a>
+                            <i class="arrow_carrot-down_alt2 mobile_dropdown_icon" aria-hidden="true"
+                               data-toggle="dropdown"></i>
+                        </li>
+                        <li class="nav-item dropdown submenu mega_menu tab-demo">
+                            <a href="/blog" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">Blog</a>
+                        </li>
+                        <li class="nav-item dropdown submenu mega_menu tab-demo">
+                            <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">Job Recommendation</a>
                         </li>
                         <li class="nav-item dropdown submenu">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -133,7 +93,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="Aboutus.html" class="nav-link">
+                                    <a href="aboutus.html" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>About Us</h5>
@@ -154,7 +114,7 @@
                 <div class="breadcrumb_content">
                     <h2>The Power of Physical Activity for Women's Health</h2>
                     <div class="single_post_author">
-                        <img class="author_img" src="../static/img/blog-single/author_single.jpg" alt="">
+                        <img class="author_img" src="../static/img/blog-grid/logo.jpg" alt="">
                         <div class="text">
                             <a href="#"><h4>HerBlossom Team</h4></a>
                             <div class="post_tag">
@@ -250,15 +210,6 @@
                                         <li><a href="#"><i class="social_vimeo"></i></a></li>
                                         <li><a href="#"><i class="social_linkedin"></i></a></li>
                                     </ul>
-                                </div>
-                            </div>
-                            <div class="blog_post_author media">
-                                <div class="author_img">
-                                    <img src="../static/img/blog-single/author.jpg" alt="">
-                                </div>
-                                <div class="media-body">
-                                    <h5>HerBlossom Team</h5>
-                                    <p>Our team of health and wellness experts is dedicated to providing valuable information to help women lead healthier, more active lives. We believe in the power of physical activity to transform women's health and well-being.</p>
                                 </div>
                             </div>
                             <div class="blog_related_post">
