--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="../static/css_test/responsive.css">
     <title>HerBlossom</title>
     <style>
-    .sign_right {
-        background-image: url("../static/images/background5.jpg") !important;
-        background-size: cover !important;
-        background-position: center !important;
-        background-repeat: no-repeat !important;
-    }
+    /*.sign_right {*/
+    /*    background-image: url("../static/images/background5.jpg") !important;*/
+    /*    background-size: cover !important;*/
+    /*    background-position: center !important;*/
+    /*    background-repeat: no-repeat !important;*/
+    /*}*/
 </style>
 </head>
 
